product list variant update